--- a/mhw-builds-wp/savage-vs-saed.html
+++ b/mhw-builds-wp/savage-vs-saed.html
@@ -53,6 +53,8 @@ The purpose of this section is just to illustrate that Savage Axe Slash has spli
 <h2>3: How to Savage Axe Style</h2>
 If you only read 1 sentence of this section, read this one: <u>do NOT spend the whole fight walking around in Axe mode</u>. As a general rule (with exceptions) don't even be in Axe mode for more than 2 attacks unless the monster is toppled or otherwise CCed. You will still mainly play in Sword mode so you have access to blocking and guard points which are central to MHW CB play.
 
+Update 4/28/20: As of the time of writing this update, I have seen a number of runs where staying in Axe mode when the monster is not CCed is viable. Typically while doing this you will punish smaller openings with Upswing, Upswing + Downswing, or AED (with no startup since you can do it directly in Axe mode). Example runs: <a href="https://www.youtube.com/watch?v=CMnbNkXW52c" target="_blank">[1]</a> <a href="https://www.youtube.com/watch?v=yGZsalBwqZQ" target="_blank">[2]</a>
+
 Small openings are punished with Double Slash, AED, or Axe Morph, and large openings (5+ seconds) are punished with ED2 + Rising Slash combo, ending with AED (for example: Axe Morph > ED2 > Rising Slash > ED2 > AED). The ideal combo depends on the length of the opening. Of course, try to keep Savage Axe buff up but don't be afraid to spend the last phial for a juicy AED.
 
 As for skills, normally core skills Artillery, Focus, and Capacity boost have less benefit (not zero benefit) for Savage Axe style and can be replaced depending on personal preference. Elemental builds should still use Element Attack up 6 as it benefits physical hits and not only phial damage like Artillery.
