--- a/mhw-builds-wp/builds-console.html
+++ b/mhw-builds-wp/builds-console.html
@@ -1,7 +1,7 @@
 <div class="submenu">
     <div class="shaded submenu-1"><a href="/charge-blade">Master Rank</a></div>
     <div class="shaded submenu-3"><a href="/high-rank-charge-blade-builds">High Rank</a></div>
-    <div class="shaded submenu-4"><a href="/charge-blade-beginner-faq">Techniques & Formulas</a></div>
+    <div class="shaded submenu-7"><a href="/charge-blade-guide">CB Guide</a></div>
     <div class="shaded submenu-6"><a href="/savage-axe-style-vs-saed-style">Savage vs SAED</a></div>
     <div class="shaded submenu-5"><a href="/charge-blade-changelog">Patch History</a></div>
 </div>
@@ -21,6 +21,10 @@
 <p>&nbsp;</p>
 <h4>Last Update</h4>
 <p style="font-size:14px;">
+5/28/2020
+Re-added old Chrome Fort progression builds for people unable to farm Raging Brachy after story
+</p>
+<p style="font-size:14px;">
 5/4/2020
 Added Kjarr Focusless builds
 Added Kjarr Anti-Rajang build
@@ -39,6 +43,9 @@ Dear Rosetta (Pink Rathian tree) OR Chrome Fortress III (Iron tree)
 <h4>Impact</h4>
 1. Safi's Shattershield* (EVENT: Safi'Jiiva)
 2. Lightbreak Charge Blade (Raging Brachydios tree)
+3. Kjarr Strongarm "Crusher" (EVENT: MR Kulve Taroth)
+4. Dante's Devil Sword+ (EVENT: Code Red & EVENT: A Shocking Climax)
+5. Royal Star Shield (EVENT: 50 Shades of White)
 
 * you can get other status CBs if you want, Blast is the best general purpose one
 <h4>Fire</h4>
@@ -75,9 +82,24 @@ Dear Rosetta (Pink Rathian tree) OR Chrome Fortress III (Iron tree)
 <img style="max-width:100%;" src="https://mhwbuilds.files.wordpress.com/2020/01/poverty-mr5.png" />
 <!-- AAAA -->
 <h4 id="progression-post-story" style="display:flex;margin-top:-40px;padding-top:40px;"><a href="#progression-post-story" style="padding-right:4px;">#</a>Post-story Builds</h4>
+<h4 id="" style="display:flex;margin-top:-40px;padding-top:40px;">Pre-Lightbreak, no decos</h4>
+If you are unable to farm Raging Brachydios right away (see below explanation), here are some builds you can continue building towards until you can get Raging Brachydios gear. Chrome Fortress III can be replaced with <b>Dante's Devil Sword+</b> or <b>Royal Star Shield</b> (both from events).
+
+<details>
+    <summary>Show builds</summary>
+    <div class="details-inside">
+    <h4 id="" style="display:flex;margin-top:-40px;padding-top:40px;">Chrome Fort (or event CB), only R8 decos and under</h4>
+    <img style="max-width:100%;" src="https://mhwbuilds.files.wordpress.com/2020/01/progression-chromefort-r8-1.png" />
+    <h4 id="" style="display:flex;margin-top:-40px;padding-top:40px;">Chrome Fort (or event CB), only R10 decos and under</h4>
+    <img style="max-width:100%;" src="https://mhwbuilds.files.wordpress.com/2020/01/progression-chromefort-r10.png" />
+    </div>
+</details>
+<p>&nbsp;</p>
 <h4 id="" style="display:flex;margin-top:-40px;padding-top:40px;">Lightbreak Poverty, no decos</h4>
 <img style="max-width:100%;" src="https://mhwbuilds.files.wordpress.com/2020/03/poverty-no-deco.png" />
-<p style="margin-top:-1em;margin-bottom:2.5em;">Unfortunately, you will need to farm a lot of Raging Brachydios right after story for its armor and weapon. Each armor piece also requires a mantle-quality item to create. When you get a Magazine jewel (R7), replace the helm with Raging Brachydios a+. When you get an Ironwall jewel (R7 or combination) and Charger jewel (R8 or combination), replace the waist with Raging Brachydios a+.</p>
+<p style="margin-top:-1em;margin-bottom:2.5em;">Raging Brachydios is a substantially difficult encounter which can be attempted as soon as the story is complete (and fighting its prerequisites Rajang and Stygian Zinogre). However, it may be too overwhelming for players until they get at least a few augments and better decorations (especially Health augment). If you cannot farm it effectively (you need multiple Immortal Reactors) I recommend waiting until you can make and augment a Beotodus CB with Health augment (MR 50+) and make a build with Guard 5 and Antiblast 3.
+
+When you get a Magazine jewel (R7), replace the helm with Raging Brachydios a+. When you get an Ironwall jewel (R7 or combination) and Charger jewel (R8 or combination), replace the waist with Raging Brachydios a+.</p>
 <h4 id="" style="display:flex;margin-top:-40px;padding-top:40px;">Lightbreak Poverty, only R8 decos and under</h4>
 <img style="max-width:100%;" src="https://mhwbuilds.files.wordpress.com/2020/03/poverty-r8-deco.png" />
 <p style="margin-top:-1em;margin-bottom:2.5em;">Helm can be either B+ or a+, B+ will be used more later.</p>
