--- a/mhw-builds-wp/savage-vs-saed.html
+++ b/mhw-builds-wp/savage-vs-saed.html
@@ -1,7 +1,7 @@
 <div class="submenu">
     <div class="shaded submenu-1"><a href="/charge-blade">Master Rank</a></div>
     <div class="shaded submenu-3"><a href="/high-rank-charge-blade-builds">High Rank</a></div>
-    <div class="shaded submenu-4"><a href="/charge-blade-beginner-faq">Techniques & Formulas</a></div>
+    <div class="shaded submenu-7"><a href="/charge-blade-guide">CB Guide</a></div>
     <div class="shaded submenu-6"><a href="/savage-axe-style-vs-saed-style">Savage vs SAED</a></div>
     <div class="shaded submenu-5"><a href="/charge-blade-changelog">Patch History</a></div>
 </div>
@@ -64,10 +64,11 @@ If playing multiplayer, try not to use Rising Slash as you can launch teammates.
 1. Morph to Axe  →  AED
 2. Morph to Axe  →  ED2  → AED
 3. Morph to Axe  →  Upswing  → ED2  → AED
-4. Morph to Axe  →  ED2  →  Upswing  →  Downswing  →  AED
+4a. Morph to Axe  →  ED2  →  Upswing  →  Downswing  →  AED
+4b. Weak Slash  →  Shield Thrust  →  AED  →  Weak Slash  →  Shield Thrust  →  AED
 5. Morph to Axe  →  ED2  →  Upswing  →  ED2  →  AED
 
-These are sorted from short to long. For example, Combo 1 can be performed on most monsters' clutch stagger by clawing them and letting go without using clutch claw finisher. Combo 4 fits into most monsters' topple or stun duration. Combo 5 is generally too slow except for "dunking" airborne monsters which gives an extended topple. Depending on the opening and how long it takes to move your character to the ideal position to begin attacking you will need to pick one of these to do.
+These are sorted from short to long. For example, Combo 1 can be performed on most monsters' clutch stagger by clawing them and letting go without using clutch claw finisher. Combo 4a fits into most monsters' topple or stun duration. Combo 4b is about the same length as 4a and is situationally used on Elemental CBs for monsters with high elemental hitzones but poor physical hitzones (e.g Namielle). Combo 5 is generally too slow except for "dunking" airborne monsters which gives an extended topple. Depending on the opening and how long it takes to move your character to the ideal position to begin attacking you will need to pick one of these to do.
 
 Also, Morph to Axe can be replaced with Reload phials → ED1 if you need to refill phials before attacking, or if ED1's sideways hitbox is more favorable than Morph to Axe. Morph to Axe can also be replaced with Dash Slam if you are already in Axe mode.
 <p> </p>
