--- a/mhw-builds-wp/patch-history.html
+++ b/mhw-builds-wp/patch-history.html
@@ -1,7 +1,7 @@
 <div class="submenu">
     <div class="shaded submenu-1"><a href="/charge-blade">Master Rank</a></div>
     <div class="shaded submenu-3"><a href="/high-rank-charge-blade-builds">High Rank</a></div>
-    <div class="shaded submenu-4"><a href="/charge-blade-beginner-faq">Techniques & Formulas</a></div>
+    <div class="shaded submenu-7"><a href="/charge-blade-guide">CB Guide</a></div>
     <div class="shaded submenu-6"><a href="/savage-axe-style-vs-saed-style">Savage vs SAED</a></div>
     <div class="shaded submenu-5"><a href="/charge-blade-changelog">Patch History</a></div>
 </div>
