--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -55,7 +55,14 @@
     6/6 sugar pack
 4/4 guard dualchip
     8/8 guard chip pack
-    4/4 chip catalyst</div>
+    4/4 chip catalyst
+
+Your goal
+4 material
+2/5 other material
+(use the checkbox or the + and - buttons to track your progress)
+
+</div>
     </div>
     </body>
 </html>
