--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -36,6 +36,14 @@
                 right: 0px;
                 overflow: hidden;
             }
+
+            .done {
+                color: #a2cf6e;
+            }
+
+            .in-progress {
+                color: #ffcd38;
+            }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
         <script src="jquery.min.js"></script>
