--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -44,6 +44,10 @@
             .in-progress {
                 color: #ffcd38;
             }
+
+            .invisible {
+                visibility: hidden;
+            }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
         <script src="jquery.min.js"></script>
