--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -48,11 +48,32 @@
             .invisible {
                 visibility: hidden;
             }
+
+            .ace_material_t1 {
+                color: #A0a0a0;
+            }
+
+            .ace_material_t2 {
+                color: #DCE437;
+            }
+
+            .ace_material_t3 {
+                color: #00B2F6;
+            }
+
+            .ace_material_t4 {
+                color: #D6C5D6;
+            }
+
+            .ace_material_t5 {
+                color: #FDCA00;
+            }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
         <script src="jquery.min.js"></script>
         <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM=" crossorigin="anonymous"></script>
         <script src="main.js"></script>
+        <script src="https://pagecdn.io/lib/ace/1.4.5/ext-language_tools.js" crossorigin="anonymous"></script>
     </head>
     <body ng-app="app" ng-controller="MyController as vm" id="">
     <div class='ak-container'></div>
