improved performance, expand/shrink

--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -11,6 +11,10 @@
                 left: 60px;
             }
 
+            #editor * {
+                font-size: 14px !important;
+            }
+
             body {
                 background: #282a36;
             }
