--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -81,23 +81,24 @@
     </head>
     <body ng-app="app" ng-controller="MyController as vm" id="">
     <div class='ak-container'></div>
-<div id="editor">Chen E2
-4 polymer prep
-    4 orirock concentration
-    0/4 oriron block
-    0/4 keton colloid
-0/6 white horse kohl
-    0/6 loxic kohl
-    3/6 RMA-24
-    6/6 sugar pack
-4/4 guard dualchip
-    8/8 guard chip pack
-    4/4 chip catalyst
+<div id="editor">
+Stuff Planner
 
-Your goal
-4 material
-2/5 other material
-(use the checkbox or the + and - buttons to track your progress)
+Manticore
+S1
+3/3 oriron_block
+1/1 sugar_pack
+2/2 optimized_device
+5/5 oriron_block
+0/4 polymerization_preparation
+    0/4 orirock_concentration
+        0/16 orirock_cluster
+    0/4 oriron_block
+    0/4 keton_colloid
+0/4 grindstone_pentahydrate
+    0/4 grindstone
+    0/4 oriron_cluster
+    0/4 integrated_device
 
 </div>
     </div>
