--- a/ak-checklist/index.html
+++ b/ak-checklist/index.html
@@ -81,8 +81,12 @@
     </head>
     <body ng-app="app" ng-controller="MyController as vm" id="">
     <div class='ak-container'></div>
-<div id="editor">
-Stuff Planner
+<div id="editor">Stuff Planner
+
+Eyja
+S3
+6 d32_steel
+5 keton_colloid
 
 Manticore
 S1
@@ -99,6 +103,216 @@ S1
     0/4 grindstone
     0/4 oriron_cluster
     0/4 integrated_device
+
+Projekt Red
+7 manganese_trihydrate
+14 orirock_cluster
+S2
+3 keton_colloid
+3 polyester_pack
+3 white_horse_kohl
+5 keton_colloid
+4 bipolar_nanoflake
+3 keton_colloid
+
+Mayer
+6 oriron_block
+11 RMA70-12
+
+Suzuran
+S2
+4/4 keton_colloid
+4/4 coagulating_gel
+4/4 oriron_block
+7/7 incandescent_alloy_block
+6 bipolar_nanoflake
+5 grindstone_pentahydrate
+S3
+4/4 white_horse_kohl
+8/8 aketon
+3 optimized_device
+6 oriron_block
+6 bipolar_nanoflake
+5 keton_colloid
+
+May
+12/12 polyester_pack
+14/14 oriron_cluster
+5/5 sniper_chip_pack
+S1
+1 manganese_trihydrate
+3 integrated_device
+2 RMA70-24
+2 manganese_trihydrate
+2 d32_steel
+2 polyester_lump
+S2
+1 grindstone_pentahydrate
+4 loxic_kohl
+2 orirock_concentration
+3 grindstone_pentahydrate
+2 polymerization_preparation
+2 optimized_device
+
+Ambriel
+0/16 oriron_cluster
+0/6 RMA70-12
+0/5 sniper_chip_pack
+
+Liskarm
+4 oriron
+5 polyester_pack
+2 oriron_cluster
+3 grindstone
+0/7 grindstone_pentahydrate
+15 aketon
+6 defender_chip_pack
+3 chip_catalyst
+
+Skadi
+0/6 aketon
+0/3 integrated_device
+0/5 sugar_pack
+4 d32_steel
+9 orirock_concentration
+8 guard_chip_pack
+4 chip_catalyst
+
+Nightingale E2
+
+Shining
+4 bipolar_nanoflake
+5 oriron_block
+
+Shamare
+3/3 orirock_concentration
+4/4 grindstone
+3 manganese_trihydrate
+4 optimized_device
+4 d32_steel
+4/4 polymerized_gel
+
+Platinum S2
+2/2 optimized_device
+3/3 oriron_cluster
+3 manganese_trihydrate
+4 optimized_device
+4 bipolar_nanoflake
+4/4 sugar_lump
+    
+Texas S2
+3/3 grindstone_pentahydrate
+4/4 loxic_kohl
+3 orirock_concentration
+4 grindstone_pentahydrate
+4 polymerization_preparation
+3 optimized_device
+
+Ambriel S2
+1 grindstone_pentahydrate
+4 loxic_kohl
+0/2 polymerized_gel
+3 orirock_concentration
+2 d32_steel
+2 oriron_block
+
+Specter S2
+3/3 polyester_lump
+4 orirock_cluster
+3 keton_colloid
+5/5 polyester_lump
+4 bipolar_nanoflake
+3 manganese_trihydrate
+
+Warfarin S2
+3 polyester_pack
+4 orirock_cluster
+3 keton_colloid
+5 polyester_pack
+4 d32_steel
+3 optimized_device
+
+Saria S2
+4 oriron_block
+4 sugar_pack
+4 white_horse_kohl
+8 keton_colloid
+6 bipolar_nanoflake
+5 keton_colloid
+
+Ifrit
+4/4 grindstone_pentahydrate
+7/7 loxic_kohl
+
+Ceobe S2
+4/4 incandescent_alloy_block
+5/5 RMA70-12
+4 keton_colloid
+9 polymerized_gel
+6 d32_steel
+6 incandescent_alloy_block
+
+Hoshiguma S2
+4/4 polyester_lump
+8 orirock_cluster
+3 optimized_device
+6 oriron_block
+6 polymerization_preparation
+6 polyester_lump
+
+manticore e2
+schwarz e2
+ambriel e2
+liskarm e2
+nightingale 
+red e2
+mayer e2
+gravel e2
+feater e2
+may e2
+skadi e2
+
+below is just for autocompletes
+
+orirock
+orirock_cube
+orirock_cluster
+orirock_concentration
+damaged_device
+device
+integrated_device
+optimized_device
+ester
+polyester
+polyester_pack
+polyester_lump
+sugar_substitute
+sugar
+sugar_pack
+sugar_lump
+oriron_shard
+oriron
+oriron_cluster
+oriron_block
+diketon
+polyketon
+aketon
+keton_colloid
+loxic_kohl
+white_horse_kohl
+grindstone
+grindstone_pentahydrate
+RMA70-12
+RMA70-24
+manganese_ore
+manganese_trihydrate
+incandescent_alloy
+incandescent_alloy_block
+coagulating_gel
+polymerized_gel
+d32_steel
+polymerization_preparation
+bipolar_nanoflake
 
 </div>
     </div>
