--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -215,7 +215,7 @@
         </div>
         <div class="spacer"></div>
         <div class="flex1"></div>
-        <div class="mauto">Problems? Message <a href="https://twitter.com/stripedypaper" target="_blank">@stripedypaper</a></div>
+        <div class="mauto">Problems? Message <a href="https://twitter.com/boardwalkhotel_" target="_blank">@boardwalkhotel_</a></div>
         <div id="uploaded"></div>
     </div>
 </body>
